--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/mutuelle_data?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+#com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=false
+
+#create,update,create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.dialect=org.hibernate.dialect.MySQL57Dialect
+
+# spring.security.enable-csrf=false
 
